# hype-check

./: .gitignore  .gitmodules  INTEGRATION_GUIDE.md  QUICKSTART.md  README.md  SETUP.md  baseline_eval.py  evaluate_continuous.py  pyproject.toml  requirements.txt  test_foundation_models.py  train.py  tune_neural.py
config/: baselines_eval.yaml  neural_eval.yaml  neural_tune_dragonnet_rest.yaml  neural_tune_full.yaml  neural_tune_gpu_full.yaml  neural_tune_gpu_full_wandb.yaml  neural_tune_pilot.yaml  neural_tune_smoke.yaml  neural_tune_smoke_all_models.yaml  neural_tune_tarnet_full.yaml  neural_tune_tarnet_pilot.yaml  train.yaml
config/dataloaders/: stable-large.yaml  stable.yaml  template.yaml
config/datasets/: criteo.yaml  criteo_scikit.yaml  hillstrom.yaml  hillstrom_scikit.yaml  lenta_scikit.yaml  lzd.yaml  megafon_scikit.yaml  orange.yaml  template.yaml  x5.yaml  x5_scikit.yaml
config/metrics/: template.yaml  uplift.yaml
config/model/: causalfm.yaml  causalpfn.yaml  causalpfn_continuous.yaml  cfrnet.yaml  descn.yaml  dopfn.yaml  dr_learner.yaml  dragonnet.yaml  dragonnet_continuous.yaml  efin.yaml  focat.yaml  neural_defaults.yaml  s_learner.yaml  t_learner.yaml  tabpfn3.yaml  tarnet.yaml  tarnet_continuous.yaml  (+2 more)
notebooks/: datasphere_neural_gpu_tune.ipynb
results/: curves_hillstrom.csv  curves_orange.csv  dashboard.html  metrics.csv
scripts/: recompute_lockbox.py  run_baselines.py  run_neural_tune_yandex_gpu.sh  smoke_test.py  upload_dragonnet_wandb.py  upload_neural_wandb.py  upload_to_wandb.py  wait_and_upload_tarnet.sh  wait_and_upload_wandb.sh
(+57 files in other folders)
