[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-template"
version = "0.1.0-template"
description = "Hydra + Lightning ML project template — config-driven training with modular components"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [ { name = "Aleksandr Serlov", email = "sana3696g@gmail.com" } ]
keywords = ["template", "machine-learning", "hydra", "lightning", "pytorch"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Runtime dependencies are pinned in requirements.txt. Keep this list minimal.
dependencies = [
]
